@@ -1,6 +1,7 @@
 22. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
 	- crash on loading file content fixed
 	- crash on insert history action fixed
+	- own messagehandler on debug build added
 
 19. Apr 2012 Christoph Thielecke <crissi99@gmx.de>
 	- crash at adding new media if dirview is empty fixed
